@@ -188,6 +188,12 @@ public class MavenProjectModelModifierTest extends MavenDomWithIndicesTestCase {
 
     waitUntilImported(result);
     assertEquals(LanguageLevel.JDK_1_8, EffectiveLanguageLevelUtil.getEffectiveLanguageLevel(module));
+
+    getExtension().changeLanguageLevel(module, LanguageLevel.JDK_13_PREVIEW);
+    assertEquals("--enable-preview",
+                 findTag("project.build.plugins.plugin")
+                   .findFirstSubTag("configuration")
+                   .getSubTagText("compilerArgs"));
   }
 
   private void createTwoModulesPom(final String m1, final String m2) {
